--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
             </div>
 
             <nav id="menu" class="menu d-none flex-column">
-              <a href="index.html" class="active">Home</a>
+              <a href="index.html" >Home</a>
               <a href="about.html">About</a>
               <a href="project.html">Projects</a>
               <a href="contact.html" class="active">Contact</a>
