--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="container-fluid p-0 m-0">
+    <div class="container-fluid p-0 m-0 pb-5">
       <div class="container-fluid nav-divition">
         <div class="container" style="max-width: 1200px; padding-top: 10px">
           <div class="d-flex align-items-center justify-content-between" style="height: 72px">
@@ -38,7 +38,7 @@
             </div>
 
             <nav id="menu" class="menu d-none flex-column">
-              <a href="index.html" >Home</a>
+              <a href="index.html">Home</a>
               <a href="about.html">About</a>
               <a href="project.html">Projects</a>
               <a href="contact.html" class="active">Contact</a>
@@ -58,11 +58,10 @@
             <div class="col-md-6">
               <span class="contact-title">Looking to start a project or you need consultation? Feel free to contact me.</span>
               <span class="contact-location"> Coimbatore,TN,INDIA </span>
-              <a href="#" class="contact-email">Naveenarjun.webdesigner@gmail.com</a>
+              <a href="mailto:>Naveenarjun.webdesigner@gmail.com" class="contact-email">Naveenarjun.webdesigner@gmail.com</a>
               <div class="mt-4">
                 <a href="https://www.linkedin.com/in/naveenarjunwebdesigner" class="contact-link mt-4" target="_blank">Linkdin <i class="bi bi-linkedin"></i></a>
                 <a href="https://github.com/Naveenkumar2798?tab=repositories" class="contact-link ms-3" target="_blank">Github <i class="bi bi-github"></i></a>
-                <a href="mailto:naveenarjun21096@gmail.com" class="contact-link ms-3" target="_blank"> Mail <i class="bi bi-envelope-fill"></i> </a>
                 <a href="https://wa.me/919003701577?text=Hello%20I%20would%20like%20to%20know%20more" target="_blank" class="contact-link ms-3"> WhatsApp <i class="bi bi-whatsapp"></i> </a>
               </div>
             </div>
