--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="container-fluid p-0 m-0">
+    <div class="container-fluid p-0 m-0 pb-5">
       <div class="container-fluid nav-divition">
         <div class="container" style="max-width: 1200px; padding-top: 10px">
           <div class="d-flex align-items-center justify-content-between" style="height: 72px">
@@ -85,23 +85,22 @@
 
       <div class="container" style="margin-top: 110px">
         <div class="container mt-5" style="max-width: 1000px">
-          <div class="header d-flex align-items-center" tabindex="0">
+          <a href="contact.html" class="header d-flex align-items-center text-decoration-none" tabindex="0">
             <p>CONTACT</p>
             <hr class="flex-grow-1" />
             <span class="highlight-bar">
               <span class="arrow-head top"></span>
               <span class="arrow-head bottom"></span>
             </span>
-          </div>
+          </a>
           <div class="row mt-4 gx-5">
             <div class="col-md-6">
               <span class="contact-title">Looking to start a project or you need consultation? Feel free to contact me.</span>
               <span class="contact-location"> Coimbatore,TN,INDIA </span>
-              <a href="#" class="contact-email">Naveenarjun.webdesigner@gmail.com</a>
+              <a href="mailto:>Naveenarjun.webdesigner@gmail.com" class="contact-email">Naveenarjun.webdesigner@gmail.com</a>
               <div class="mt-4">
                 <a href="https://www.linkedin.com/in/naveenarjunwebdesigner" class="contact-link mt-4" target="_blank">Linkdin <i class="bi bi-linkedin"></i></a>
                 <a href="https://github.com/Naveenkumar2798?tab=repositories" class="contact-link ms-3" target="_blank">Github <i class="bi bi-github"></i></a>
-                <a href="mailto:naveenarjun21096@gmail.com" class="contact-link ms-3" target="_blank"> Mail <i class="bi bi-envelope-fill"></i> </a>
                 <a href="https://wa.me/919003701577?text=Hello%20I%20would%20like%20to%20know%20more" target="_blank" class="contact-link ms-3"> WhatsApp <i class="bi bi-whatsapp"></i> </a>
               </div>
             </div>
