--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="container-fluid p-0 m-0">
+    <div class="container-fluid p-0 m-0 pb-5">
       <div class="container-fluid nav-divition">
         <div class="container" style="max-width: 1200px; padding-top: 10px">
           <div class="d-flex align-items-center justify-content-between" style="height: 72px">
@@ -52,7 +52,7 @@
         <div class="diamond"><i class="fa-solid fa-fire"></i></div>
       </div>
 
-      <div class="container" style="margin-top: 110px">
+      <div class="container" style="margin-top: 70px">
         <div class="container" style="max-width: 1000px">
           <div class="row g-3 g-md-2">
             <div class="col-md-6 my-details">
@@ -91,61 +91,61 @@
             <div class="col-md-6">
               <div class="about-us-card" style="width: 95%">
                 <div>
-                  <div style="font-size: 26px; font-weight: bold">Frontend</div>
-                  <div style="margin-top: 4px; font-size: 18px">Responsive UI Design</div>
+                  <div class="about-us-card-title">Frontend</div>
+                  <div class="about-us-description">Responsive UI Design</div>
                 </div>
-                <div style="border-left: 2px solid var(--highlight-color); height: 48px; margin: 0 20px"></div>
-                <div style="font-size: 60px; font-weight: bold; color: var(--primary-color-30)">95%</div>
+                <div style="border-left: 2px solid var(--primary-color-20); height: 48px; margin: 0 20px"></div>
+                <div class="about-us-percentage">95%</div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="about-us-card" style="width: 95%">
                 <div>
-                  <div style="font-size: 26px; font-weight: bold">Backend</div>
-                  <div style="margin-top: 4px; font-size: 18px">Secure APIs & Auth</div>
+                  <div class="about-us-card-title">Backend</div>
+                  <div class="about-us-description">Secure APIs & Auth</div>
                 </div>
-                <div style="border-left: 2px solid var(--highlight-color); height: 48px; margin: 0 20px"></div>
-                <div style="font-size: 60px; font-weight: bold; color: var(--primary-color-30)">88%</div>
+                <div style="border-left: 2px solid var(--primary-color-20); height: 48px; margin: 0 20px"></div>
+                <div class="about-us-percentage">88%</div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="about-us-card" style="width: 95%">
                 <div>
-                  <div style="font-size: 26px; font-weight: bold">Full Stack</div>
-                  <div style="margin-top: 4px; font-size: 18px">End-to-End Apps</div>
+                  <div class="about-us-card-title">Full Stack</div>
+                  <div class="about-us-description">End-to-End Apps</div>
                 </div>
-                <div style="border-left: 2px solid var(--highlight-color); height: 48px; margin: 0 20px"></div>
-                <div style="font-size: 60px; font-weight: bold; color: var(--primary-color-30)">93%</div>
+                <div style="border-left: 2px solid var(--primary-color-20); height: 48px; margin: 0 20px"></div>
+                <div class="about-us-percentage">93%</div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="about-us-card" style="width: 95%">
                 <div>
-                  <div style="font-size: 26px; font-weight: bold">Python</div>
-                  <div style="margin-top: 4px; font-size: 18px">Django, Backend Logic</div>
+                  <div class="about-us-card-title">Python</div>
+                  <div class="about-us-description">Django, Backend Logic</div>
                 </div>
-                <div style="border-left: 2px solid var(--highlight-color); height: 48px; margin: 0 20px"></div>
-                <div style="font-size: 60px; font-weight: bold; color: var(--primary-color-30)">87%</div>
+                <div style="border-left: 2px solid var(--primary-color-20); height: 48px; margin: 0 20px"></div>
+                <div class="about-us-percentage">87%</div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="about-us-card" style="width: 95%">
                 <div>
-                  <div style="font-size: 26px; font-weight: bold">Databases</div>
-                  <div style="margin-top: 4px; font-size: 18px">MySQL, SQL Optimization</div>
+                  <div class="about-us-card-title">Databases</div>
+                  <div class="about-us-description">MySQL, SQL Optimization</div>
                 </div>
-                <div style="border-left: 2px solid var(--highlight-color); height: 48px; margin: 0 20px"></div>
-                <div style="font-size: 60px; font-weight: bold; color: var(--primary-color-30)">94%</div>
+                <div style="border-left: 2px solid var(--primary-color-20); height: 48px; margin: 0 20px"></div>
+                <div class="about-us-percentage">94%</div>
               </div>
             </div>
             <div class="col-md-6">
               <div class="about-us-card" style="width: 95%">
                 <div>
-                  <div style="font-size: 26px; font-weight: bold">JavaScript</div>
-                  <div style="margin-top: 4px; font-size: 18px">React, Custom Animations</div>
+                  <div class="about-us-card-title">JavaScript</div>
+                  <div class="about-us-description">React, Custom Animations</div>
                 </div>
-                <div style="border-left: 2px solid var(--highlight-color); height: 48px; margin: 0 20px"></div>
-                <div style="font-size: 60px; font-weight: bold; color: var(--primary-color-30)">89%</div>
+                <div style="border-left: 2px solid var(--primary-color-20); height: 48px; margin: 0 20px"></div>
+                <div class="about-us-percentage">89%</div>
               </div>
             </div>
           </div>
@@ -184,23 +184,22 @@
       </div>
       <div class="container" style="margin-top: 110px">
         <div class="container mt-5" style="max-width: 1000px">
-          <div class="header d-flex align-items-center" tabindex="0">
+          <a href="contact.html" class="header d-flex align-items-center text-decoration-none" tabindex="0">
             <p>CONTACT</p>
             <hr class="flex-grow-1" />
             <span class="highlight-bar">
               <span class="arrow-head top"></span>
               <span class="arrow-head bottom"></span>
             </span>
-          </div>
+          </a>
           <div class="row mt-4 gx-5">
             <div class="col-md-6">
               <span class="contact-title">Looking to start a project or you need consultation? Feel free to contact me.</span>
               <span class="contact-location"> Coimbatore,TN,INDIA </span>
-              <a href="#" class="contact-email">Naveenarjun.webdesigner@gmail.com</a>
+              <a href="mailto:>Naveenarjun.webdesigner@gmail.com" class="contact-email">Naveenarjun.webdesigner@gmail.com</a>
               <div class="mt-4">
                 <a href="https://www.linkedin.com/in/naveenarjunwebdesigner" class="contact-link mt-4" target="_blank">Linkdin <i class="bi bi-linkedin"></i></a>
                 <a href="https://github.com/Naveenkumar2798?tab=repositories" class="contact-link ms-3" target="_blank">Github <i class="bi bi-github"></i></a>
-                <a href="mailto:naveenarjun21096@gmail.com" class="contact-link ms-3" target="_blank"> Mail <i class="bi bi-envelope-fill"></i> </a>
                 <a href="https://wa.me/919003701577?text=Hello%20I%20would%20like%20to%20know%20more" target="_blank" class="contact-link ms-3"> WhatsApp <i class="bi bi-whatsapp"></i> </a>
               </div>
             </div>
