--- a/index.html
+++ b/index.html
@@ -91,27 +91,27 @@
               <div class="container mt-4 p-0">
                 <div class="about-us-card" style="width: 95%">
                   <div>
-                    <div style="font-size: 26px; font-weight: bold">Frontend</div>
-                    <div style="margin-top: 4px; font-size: 18px">Responsive UI Design</div>
+                    <div class="about-us-card-title">Frontend</div>
+                    <div class="about-us-description">Responsive UI Design</div>
                   </div>
-                  <div style="border-left: 2px solid var(--highlight-color); height: 48px; margin: 0 20px"></div>
-                  <div style="font-size: 60px; font-weight: bold; color: var(--primary-color-30)">95%</div>
+                  <div style="border-left: 2px solid var(--primary-color-20); height: 48px; margin: 0 20px"></div>
+                  <div class="about-us-percentage">95%</div>
                 </div>
                 <div class="about-us-card mt-4" style="width: 95%">
                   <div>
-                    <div style="font-size: 26px; font-weight: bold">Backend</div>
-                    <div style="margin-top: 4px; font-size: 18px">Secure APIs & Auth</div>
+                    <div class="about-us-card-title">Backend</div>
+                    <div class="about-us-description">Secure APIs & Auth</div>
                   </div>
-                  <div style="border-left: 2px solid var(--highlight-color); height: 48px; margin: 0 20px"></div>
-                  <div style="font-size: 60px; font-weight: bold; color: var(--primary-color-30)">88%</div>
+                  <div style="border-left: 2px solid var(--primary-color-20); height: 48px; margin: 0 20px"></div>
+                  <div class="about-us-percentage">88%</div>
                 </div>
                 <div class="about-us-card mt-4" style="width: 95%">
                   <div>
-                    <div style="font-size: 26px; font-weight: bold">Full Stack</div>
-                    <div style="margin-top: 4px; font-size: 18px">End-to-End Apps</div>
+                    <div class="about-us-card-title">Full Stack</div>
+                    <div class="about-us-description">End-to-End Apps</div>
                   </div>
-                  <div style="border-left: 2px solid var(--highlight-color); height: 48px; margin: 0 20px"></div>
-                  <div style="font-size: 60px; font-weight: bold; color: var(--primary-color-30)">93%</div>
+                  <div style="border-left: 2px solid var(--primary-color-20); height: 48px; margin: 0 20px"></div>
+                  <div class="about-us-percentage">93%</div>
                 </div>
               </div>
             </div>
@@ -289,11 +289,10 @@
             <div class="col-md-6">
               <span class="contact-title">Looking to start a project or you need consultation? Feel free to contact me.</span>
               <span class="contact-location"> Coimbatore,TN,INDIA </span>
-              <a href="#" class="contact-email">Naveenarjun.webdesigner@gmail.com</a>
+              <a href="mailto:>Naveenarjun.webdesigner@gmail.com" class="contact-email">Naveenarjun.webdesigner@gmail.com</a>
               <div class="mt-4">
                 <a href="https://www.linkedin.com/in/naveenarjunwebdesigner" class="contact-link mt-4" target="_blank">Linkdin <i class="bi bi-linkedin"></i></a>
                 <a href="https://github.com/Naveenkumar2798?tab=repositories" class="contact-link ms-3" target="_blank">Github <i class="bi bi-github"></i></a>
-                <a href="mailto:naveenarjun21096@gmail.com" class="contact-link ms-3" target="_blank"> Mail <i class="bi bi-envelope-fill"></i> </a>
                 <a href="https://wa.me/919003701577?text=Hello%20I%20would%20like%20to%20know%20more" target="_blank" class="contact-link ms-3"> WhatsApp <i class="bi bi-whatsapp"></i> </a>
               </div>
             </div>
